@@ -260,6 +260,7 @@ disabled = false
 
 ; timeout - The maximum time in seconds that a command can execute. (if more then this execution will be aborted).
 ; NOTICE this only affects external commands not internal ones.
+; NOTICE also make sure the /settings/default/timeout is longer than this, otherwise the connection will be dropped before the script finishes
 timeout = 60
 
 ; Allow certain potentially dangerous characters in arguments - This option determines whether or not
